--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@ body {
 }
 
 html {
-
+	width: 100%;
+	height: 100%;
+	position: relative;
 }
 
 .ca_middle_wrapper {
@@ -40,7 +42,7 @@ html {
 
 .ca_popup_wrapper{
 	width:600px;
-	padding: 10px;
+	padding: 20px;
 	-webkit-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.56);
 	-moz-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.56);
 	box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.56);
@@ -57,9 +59,9 @@ html {
 
 .x_popup {
 	display: block;
-	width: 20px;
-	height: 20px;
-	background-image:url('x.jpg');
+	width: 30px;
+	height: 30px;
+	background-image:url('x.png');
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -79,7 +81,7 @@ html {
     font-size: 13px;
     position: absolute;
     top: 22px;
-    right: 7px;
+    right: 1px;
     display: block;
     -webkit-transition: .3s ease all;
     transition: .3s ease all;
@@ -89,26 +91,26 @@ html {
 }
 
 .popup_title {
-	font-weight: bold;
-	font-size: 40px;
-	margin-bottom: 16px;
+	font-size: 32px;
+	margin-bottom: 20px;
 }
 
 .popup_content_wrapper {
 	text-align: center;
-	padding: 0px 15%;
+	padding: 0px 60px;
 }
 
 .popup_sub_title {
 	font-size: 14px;
-	line-height: 21px;
-	margin-bottom: 8px;
+	line-height: 2.14;
+	margin-bottom: 20px;
 }
 
 .popup_input_wrapper {
 	position: relative;
-	padding-top: 20px;
-	margin-bottom: 10px;
+	margin-bottom: 30px;
+	height: 60px;
+	padding-top: 30px;
 }
 
 .input_content{
@@ -138,4 +140,12 @@ html {
 
 .forgot_password {
 	text-decoration: underline;
+}
+
+.popup_form {
+	position: relative;
+	display: block;
+	min-height: 0;
+	overflow: auto;
+	height: auto;
 }
