--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 	right: 0px;
 	margin: 0px;
 	direction: rtl;
+	font-family: 'south_web_400',sans-serif;
 }
 
 html {
@@ -59,8 +60,8 @@ html {
 
 .x_popup {
 	display: block;
-	width: 30px;
-	height: 30px;
+	width: 26px;
+	height: 26px;
 	background-image:url('x.png');
 	background-size: contain;
 	background-repeat: no-repeat;
@@ -72,16 +73,16 @@ html {
 }
 
 .popup_input_wrapper.is-in .lable_input {
-    top: 5px;
+    top: 12px;
     font-size: 12px;
 }
 
 .lable_input {
     color: #818181;
-    font-size: 13px;
+    font-size: 18px;
     position: absolute;
-    top: 22px;
-    right: 1px;
+    top: 34px;
+    right: 0px;
     display: block;
     -webkit-transition: .3s ease all;
     transition: .3s ease all;
@@ -93,11 +94,13 @@ html {
 .popup_title {
 	font-size: 32px;
 	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 .popup_content_wrapper {
 	text-align: center;
-	padding: 0px 60px;
+	padding: 0px 80px;
+	overflow: auto;
 }
 
 .popup_sub_title {
@@ -108,37 +111,38 @@ html {
 
 .popup_input_wrapper {
 	position: relative;
-	margin-bottom: 30px;
-	height: 60px;
+	height: 83px;
 	padding-top: 30px;
+	padding-bottom: 23px;
 }
 
 .input_content{
 	display: block;
 	width: 100%;
-	padding: 3px 5px 10px 5px;
+	padding: 3px 0px 10px 5px;
 	direction: rtl;
 	border: 0px;
-	border-bottom: 1px solid gray;
+	border-bottom: 1px solid #818181;
+	font-size: 18px;
 }
 
 .popup_click{
 	border: 0px;
-	background-color: red;
+	background-color: #d10202;
 	color: #fff;
-	font-weight: bold;
-	padding: 8px 0px;
+	padding: 17px 0px;
 	display: block;
 	width: 100%;
 	margin-top: 41px;
-	-webkit-box-shadow: 0px 3px 9px 0px rgba(0,0,0,0.55);
-	-moz-box-shadow: 0px 3px 9px 0px rgba(0,0,0,0.55);
-	box-shadow: 0px 7px 18px -1px rgba(0,0,0,0.55);
+	-webkit-box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.55);
+	-moz-box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.55);
+	box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.55);
 	font-size: 16px;
 	margin-bottom: 25px;
+	height: 50px;
 }
 
-.forgot_password {
+.popup_click_underline {
 	text-decoration: underline;
 }
 
@@ -148,4 +152,31 @@ html {
 	min-height: 0;
 	overflow: auto;
 	height: auto;
+}
+
+.buttons_wrapper {
+	position: fixed;
+	width: 100%;
+	height: auto;
+	top: 0px;
+	right: 0px;
+}
+
+.btn {
+	float: left;
+	width: 25%;
+	text-align: center;
+	padding: 20px 0px;
+	background: #fff;
+	border: 1px solid;
+	background-color: rgba(255,255,255,0.6);
+}
+
+.pop_up_error {
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
+	font-size: 12px;
+	color: #d10202;
+	display: none;
 }
