--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ html {
 }
 
 .lable_input {
-    color: #818181;
+    color: rgba(0,0,0,0.25);
     font-size: 18px;
     position: absolute;
     top: 34px;
@@ -122,7 +122,7 @@ html {
 	padding: 3px 0px 10px 5px;
 	direction: rtl;
 	border: 0px;
-	border-bottom: 1px solid #818181;
+	border-bottom: 1px solid rgba(0,0,0,0.25);
 	font-size: 18px;
 }
 
