--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ html {
     font-size: 18px;
     position: absolute;
     top: 34px;
-    right: 0px;
+    right: 15px;
     display: block;
     -webkit-transition: .3s ease all;
     transition: .3s ease all;
@@ -111,18 +111,18 @@ html {
 
 .popup_input_wrapper {
 	position: relative;
-	height: 83px;
+	height: auto;
 	padding-top: 30px;
-	padding-bottom: 23px;
+	margin-bottom: 30px;
 }
 
 .input_content{
 	display: block;
 	width: 100%;
-	padding: 3px 0px 10px 5px;
+	padding: 3px 15px 9px 5px;
 	direction: rtl;
 	border: 0px;
-	border-bottom: 1px solid rgba(0,0,0,0.25);
+	border-bottom: 2px solid rgba(0,0,0,0.25);
 	font-size: 18px;
 }
 
